--- a/style.css
+++ b/style.css
@@ -152,12 +152,12 @@ header li{
 #boxes1 .box1{
     float:left;
     text-align:center;
-    width:30%;
-    padding: 10px;
+    width:27%;
+    padding: 3%;
     
 }
 
-#boxes1 .box1{
+#boxes1 .box1 img{
     width: 65%;
 }
 
