--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ ul{
     padding-left:20px;
     padding-right: 20px;
     color:#ffffff;
+    float:right;
 }
 
 .dark{
@@ -42,6 +43,11 @@ header{
     padding-top:30px;
     min-height: 70px;
     border-bottom:#339966 3px solid;
+    text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
     
 }
 
@@ -50,6 +56,11 @@ header a{
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px;
+    text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 
@@ -98,10 +109,20 @@ header li{
      margin-top:100px;
      font-size:55px;
      margin-bottom:10px;
+	 text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
  }
  
  #showcase p{
      font-size:20px;
+     text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
  }
  
  /*newsletter*/
@@ -113,6 +134,11 @@ header li{
  
  #newsletter h1{
      float:left;
+     text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 #newsletter form{
@@ -122,7 +148,7 @@ header li{
 
 #newsletter input[type= "email"]{
     padding:4px;
-    height:25px;
+    height:24px;
     width:250px;
 }
 
