--- a/style.css
+++ b/style.css
@@ -109,6 +109,9 @@ header li{
      margin-top:100px;
      font-size:55px;
      margin-bottom:10px;
+     vertical-align:center;
+     
+     text-align: center;
 	 text-shadow:
 		-1px -1px 0 #000,
 		1px -1px 0 #000,
@@ -132,7 +135,19 @@ header li{
      background:#004080;
  }
  
- #newsletter h1{
+ .shadow{
+     text-align: center;
+     
+     text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
+
+
+ .shadow1{
+     text-align: center;
      float:left;
      text-shadow:
 		-1px -1px 0 #000,
@@ -140,6 +155,7 @@ header li{
 		-1px 1px 0 #000,
 		1px 1px 0 #000;
 }
+
 
 #newsletter form{
     float:right;
